# examples

./: '  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  prettier.config.js
_internal/templater/: Cargo.toml
_internal/templater/src/: main.rs
_internal/templater/src/example/: meta.rs  mod.rs  tpl.rs
_internal/templater/tpl/: README.md.tera
_internal/templater/tpl/example/: README.md.tera
_internal/templater/tpl/project/: README.md.tera
_internal/templater/tpl/root/: README.md.tera
javascript/sandbox/stress-test/: Cargo.toml  README.md
javascript/sandbox/stress-test/src/: args.rs  client.rs  main.rs  manager.rs  span.rs
rust/cli-websocket/server/: Cargo.toml
rust/cli-websocket/server/src/: main.rs
rust/pixelprop/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  example.toml  game-config.yaml  package.json  rivet.yaml  tsconfig.json  webpack.config.js
rust/pixelprop/assets/assets/: map-0.mtl  map-1.mtl  map-10.mtl  map-100.mtl  map-101.mtl  map-102.mtl  map-103.mtl  map-104.mtl  map-105.mtl  map-106.mtl  map-107.mtl  map-108.mtl  map-109.mtl  map-11.mtl  map-110.mtl  map-111.mtl  map-112.mtl  map-113.mtl  map-114.mtl  map-115.mtl  map-116.mtl  map-117.mtl  map-118.mtl  map-119.mtl  map-12.mtl  map-120.mtl  map-121.mtl  map-122.mtl  map-123.mtl  map-124.mtl  map-125.mtl  map-126.mtl  (+200 more)
rust/pixelprop/bots/: index.js  package-lock.json  package.json
rust/pixelprop/client/: Assets.ts  Connection.ts  Entity.ts  Game.ts  InputHandler.ts  Magic.ts  PlatformParticleSystem.ts  SpotLightPlaceholder.ts  Storage.ts  UsernameGenerationData.ts  Utils.ts  VultrClient.ts  index.html  index.ts
rust/pixelprop/misc/: Effects Testing.afphoto  Graphics.afdesign  HandBrake Video Preset.json  LUT Builder.afphoto  PixelProp Logo.afdesign
rust/pixelprop/public/: index.html
rust/pixelprop/scripts/: compress-assets.js  generate-grass.js  generate-prefabs.js  import-model.js  offset-items.js
rust/pixelprop/src/: game.rs  game_config.rs  game_world.rs  incremental_value.rs  main.rs  network.rs  quad_tree.rs  utils.rs
rust/scrunch/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.toml  package.json  rivet.yaml  tsconfig.json  webpack.config.js
rust/scrunch/client/: Connection.ts  Game.ts  Grid.ts  Magic.ts  Utils.ts  index.html  index.ts  types.ts
rust/scrunch/public/: index.html
rust/scrunch/src/: entities.rs  game.rs  game_map.rs  incremental_value.rs  main.rs  network.rs  rivet.rs  utils.rs
(+462 files in other folders)
