[package]
name = "example-templater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
image = { version = "0.24.7" }
rayon = "1.8.0"
# image = { version = "0.24.7", default-features = false, features = ["png"] }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
tera = "1.19.1"
toml = "0.8.8"
walkdir = "2.4.0"
