[package]
name = "scrunch"
version = "0.1.0"
authors = ["Nathan Flurry <developer@nathanflurry.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.0"
rand = "0.3.17"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
rmpv = "0.4.0"
rocket = "0.5.0"
serde_json = "1.0.111"
ws = "0.9.2"
