[package]
name = "basic-game-stress-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "=3.0.0-rc.8", features = ["derive"] }
console = "0.15"
futures-util = "0.3"
humantime = "2.1"
rand = "0.8"
reqwest = "0.11"
rivet-api-game = { path = "../../../gen/svc/api-game/openapi/rust" }
rust_socketio = "0.3.0"
serde_json = { version = "1.0", features = ["raw_value"] }
statrs = "0.15"
tokio = { version = "1.15", features = ["full"] }
tokio-tungstenite = "0.16"

